// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. font factory default scale 1`] = `
Object {
  "fontFamily": "TimesDigitalW04",
  "fontSize": 16,
  "lineHeight": 27,
}
`;

exports[`2. font factory large scale 1`] = `
Object {
  "fontFamily": "TimesDigitalW04",
  "fontSize": 21,
  "lineHeight": 31,
}
`;

exports[`3. font factory xlarge scale 1`] = `
Object {
  "fontFamily": "TimesDigitalW04",
  "fontSize": 23,
  "lineHeight": 33,
}
`;

exports[`4. animations should have a fadein animation wrapper component 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <Text>
    Hello World
  </Text>
</View>
`;
